# cemu-docker

./: .gitignore  Dockerfile  README.md  build.sh  id_rsa.pub  run.sh
CEMU/: .travis.yml  README-FEMU.md  README.md  meson.build
CEMU/docs/cemu/: application-development.md  code-structure.md
CEMU/docs/devel/: testing.rst
CEMU/dtc/: README
CEMU/femu-scripts/: cemu-mount.sh  dp-run.sh  dp.sh  f.sh  femu-compile.sh  femu-copy-scripts.sh  femu-run.sh  gdb-run.sh  ide-run.sh  m.sh  null-run.sh  pin.sh  pkgdep.sh  pre-all.sh  pre.sh  run-3csd-freezing.sh  run-8csd-freezing.sh  run-blackbox.sh  run-csd.sh  run-nossd.sh  run-whitebox.sh  run-zns.sh  s1.sh  s2.sh  tuning.sh  valgrind-run.sh  virtio-run.sh
CEMU/hw/femu/: Kconfig  config_example.json  femu.c  meson.build  nvme-admin.c  nvme-def.h  nvme-io.c  nvme-util.c  nvme.h  param.c  param.h
CEMU/hw/femu/backend/: backend.c  backend.h  dram.c
CEMU/hw/femu/bbssd/: bb.c  bb.h  ftl.c
CEMU/hw/femu/csd/: README.md  compute.c  compute.h  memory.c  memory.h  nvme_csd.h  sched.c  sched.h  sched_fifo.c  sched_grouped_fifo.c  sched_grouped_rr.c  sched_rr.c
CEMU/hw/femu/inc/: rte_ring.h  slab.h
CEMU/hw/femu/lib/: rte_ring.c  slab.c
CEMU/hw/femu/nand/: nand.c
CEMU/hw/femu/nossd/: nop.c
CEMU/hw/femu/ocssd/: oc12.c  oc20.c
CEMU/hw/femu/statistics/: analysis.py  femu_stat.py  plot_client.py  plot_stat.py  statistics.c  statistics.h
CEMU/hw/femu/zns/: zns.c
CEMU/python/: Makefile
CEMU/roms/opensbi/: README.md
CEMU/scripts/: meson-buildoptions.sh  qemu-binfmt-conf.sh
CEMU/scripts/kvm/: kvm_flightrecorder
CEMU/scripts/performance/: topN_perf.py
CEMU/tests/: meson.build
CEMU/tests/cemu/: Makefile  bpf_io_breakdown.py  bpf_syscall_breakdown.py  bpf_test.py  cemu_ioctl.h  prep_data.sh  test_indirect.cpp  test_iouring.c  test_knn.sh  test_lz4.sh  test_sync_breakdown.cpp  util.h  vadd_example.cpp
CEMU/tests/docker/: docker.py
CEMU/tests/qemu-iotests/: 108  128  149  149.out
CEMU/tests/rocker/: bridge  bridge-stp  bridge-vlan  bridge-vlan-stp  port
CEMU/tests/vm/: centos  centos.aarch64  conf_example_aarch64.yml  conf_example_x86.yml  ubuntu.aarch64
linux-cemu/: .config
linux-cemu/Documentation/admin-guide/: README.rst  dynamic-debug-howto.rst  perf-security.rst  quickly-build-trimmed-linux.rst  reporting-issues.rst  workload-tracing.rst
linux-cemu/Documentation/bpf/: bpf_devel_QA.rst  drgn.rst  redirect.rst  s390.rst
linux-cemu/Documentation/fb/: udlfb.rst
linux-cemu/block/: bio.c  blk-core.c
linux-cemu/fs/: Kconfig  Makefile  read_write.c
linux-cemu/io_uring/: Makefile  copy_file_range.c  copy_file_range.h  opdef.c
test-cemu/: bpf_total_breakdown.py  cemu_benchmark.cpp  iouring.h  prep_date.cpp  test_fdmfs.cpp  test_grep.sh  test_interference.py  test_knn.sh  test_lz4.sh  test_multicsd_lz4.sh  test_multiple_device.sh  test_p2p.cpp  test_sql.sh  util.c  vadd_min.cpp
test-cemu/kernel/: Makefile  knn.cc  sql.cc  vadd.bpf.c
ubpf-cemu/: .clang-format  .editorconfig  .travis.yml  CMakeLists.txt  Doxyfile  README.md  mainpage.dox
ubpf-cemu/aarch64_test/: CMakeLists.txt  run-interpret.sh  run-jit.sh
ubpf-cemu/bpf/: CMakeLists.txt  bpf.h  map.bpf.c  rel_64_32.bpf.c
ubpf-cemu/cmake/: arm64.cmake  options.cmake  packaging.cmake  platform.cmake  settings.cmake  version.cmake
ubpf-cemu/compat/macOS/: elfdefinitions.h  gelf.h  libelf.h
ubpf-cemu/compat/macOS/sys/: elfdefinitions.h
ubpf-cemu/docs/: Contributing.md
ubpf-cemu/scripts/: .check-license.ignore  check-license.sh  commit-msg  format-code  format-code.ps1  pre-commit
ubpf-cemu/test_framework/: test_elf.py  test_vm.py  testdata.py
ubpf-cemu/tests/: add.data  add64.data  alu-arith.data  alu-bit.data  alu.data  alu64-arith.data  alu64-bit.data  alu64.data  arsh-reg.data  arsh.data  arsh32-high-shift.data  arsh64.data  be16-high.data  be16.data  be32-high.data  be32.data  be64.data  call-memfrob.data  call-save.data  call.data  call_unwind.data  call_unwind_fail.data  div-by-zero-imm.data  div-by-zero-reg.data  div32-high-divisor.data  div32-imm.data  div32-reg.data  div64-by-zero-imm.data  div64-by-zero-reg.data  div64-imm.data  div64-negative-imm.data  div64-negative-reg.data  div64-reg.data  early-exit.data  err-call-bad-imm.data  err-call-unreg.data  err-invalid-reg-dst.data  err-invalid-reg-src.data  err-jmp-lddw.data  err-stack-oob.data  (+83 more)
ubpf-cemu/tests/tcp-port-80/: tcp-port-80.asm
ubpf-cemu/tests/tcp-sack/: tcp-sack.asm
ubpf-cemu/ubpf_plugin/: CMakeLists.txt  test_helpers.h  ubpf_plugin.cc
ubpf-cemu/vm/: CMakeLists.txt  ebpf.h  test.c  ubpf_config.h.inc  ubpf_int.h  ubpf_jit.c  ubpf_jit_arm64.c  ubpf_jit_x86_64.c  ubpf_jit_x86_64.h  ubpf_loader.c  ubpf_vm.c
ubpf-cemu/vm/compat/libraries/win-c/src/: CMakeLists.txt  LICENSE  README.md  cmake-mingw.sh
ubpf-cemu/vm/compat/libraries/win-c/src/source/: tags
ubpf-cemu/vm/compat/libraries/win-c/src/test/: test-g++.sh  test.cpp  test_getopt_long.cpp
ubpf-cemu/vm/compat/macos/: endian.h
ubpf-cemu/vm/compat/windows/: endian.h  unistd.c  unistd.h
ubpf-cemu/vm/compat/windows/sys/: mman.c  mman.h
ubpf-cemu/vm/inc/: ubpf.h
(+250 files in other folders)
